--- a/README
+++ b/README
@@ -61,3 +61,16 @@ After of genrate the passwords, it allow you continue with the 'attack' file, wi
 #####################################################
 
 While this script has brute force, you can stop it, with Ctrl+C, and storage the progress. For later, continue.
+
+#####################################################
+#		      LIBRARIES			    #
+#####################################################
+lib
+smtplib
+random
+mechanize
+os
+sys
+readline
+subprocess
+time
